samples/_failures_safe/1761280791_6ac3d2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a558eba1.c: In function ‘main’:
./samples/SAFE/__tmp_a558eba1.c:140:38: error: expected ‘;’ at end of input
  140 |         for (int i = 0; i < log_count
      |                                      ^
      |                                      ;
./samples/SAFE/__tmp_a558eba1.c:140:9: error: expected declaration or statement at end of input
  140 |         for (int i = 0; i < log_count
      |         ^~~
./samples/SAFE/__tmp_a558eba1.c:140:9: error: expected declaration or statement at end of input
